refactor(deliveries): update returns and create "findAllDeliveriesAvailable".
