# src/shared/infra/http/routes/deliveries.routes.ts
@@ -1,12 +1,14 @@
 import { Router } from "express";
 import { ensureAuthenticateClient } from "../../../../middlewares/ensureAuthenticateClient";
 import { CreateDeliveryController } from "../../../../modules/deliveries/useCases/createDelivery/createDeliveryController";
-
+import { FindAllDeliveriesAvailableController } from "../../../../modules/deliveries/useCases/findAllDeliveryAvailable/findAllDeliveriesAvailableController";
 
 const deliveriesRoutes = Router();
 
 const createDeliverController = new CreateDeliveryController();
+const findAllDeliveriesAvailableController = new FindAllDeliveriesAvailableController();
 
 deliveriesRoutes.post("/", ensureAuthenticateClient, createDeliverController.handle);
+deliveriesRoutes.get("/available", findAllDeliveriesAvailableController.handle);
 
 export { deliveriesRoutes };
